# Student-Management-System

./: CMakeLists.txt  grading.c  grading.h  login.c  login.h  logout.c  logout.h  main.c  student.c  student.h
